# Portifolio

./: README.md
.github/workflows/: main.yml
C.E.S.A.R/: CESL_[NLP_CLASS]_Projeto_Final.ipynb  [ATIVIDADE_FINAL]_Análise_de_Séries_Temporais_Caio_Serpa.ipynb  [CAIO_SERPA]_PROJETO_&_DESAFIO_SEGUNDA_CHAMADA.ipynb
C.E.S.A.R/MobileNetV2_RNA_Project-main/: Projeto_RNA_CESL_wandb.ipynb  README.md  WebScraping Google Images.ipynb
Data Engineering/How-Bootcamp-Projects/AWS/: .env  aws.py
Data Engineering/How-Bootcamp-Projects/Capturando Dados com Crowlers/: all_movies.py  main.py
Data Engineering/How-Bootcamp-Projects/Capturando Dados de API/: lambda_function.py  main.py  writers.py
Data Engineering/How-Bootcamp-Projects/SQL/: billboard-the-hot-100-songs  docker-compose.yml  dockerfile  main.py  sql_004.sql
Data Engineering/How-Bootcamp-Projects/jenkis/: cambio.csv  (+2 more)
Data Engineering/How-Bootcamp-Projects/lambda/: Makefile  README.md  pre-commit-config.yaml  pyproject.toml  zappa_settings.json
Data Engineering/How-Bootcamp-Projects/lambda/.github/workflows/: develop.yml  feture_branch.yml  production.yml
Data Engineering/How-Bootcamp-Projects/lambda/mercado_bitcoin/: apis.py  checkpoints.py  ingestors.py  lambda_function.py  writers.py
Data Engineering/How-Bootcamp-Projects/lambda/tests/: test_apis.py  test_integration.py
Data Engineering/Twitter_Scraping-main/: Tweet_Scraping.ipynb
Data Science Academy/: README.md
Data Science/Analise_Explotarotia_Autos-analise/: Autos_Analise_Exploratório.ipynb
Data Science/IMDb-main/: Projeto-SQL-AE-IMDb.ipynb
(+97 files in other folders)
