[tool.poetry]
name = "ingestao_bitcoin"
version = "0.1.0"
description = ""
authors = ["Andre <andresionek91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
zappa = "0.50.0"
requests = "^2.25.1"
boto3 = "^1.17.108"
backoff = "^1.10.0"
ratelimit = "^2.2.1"
pynamodb = "^5.1.0"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pytest = "^6.2.4"
flake8 = "^3.9.2"
pre-commit = "^2.13.0"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py38']
line-length = 90
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.github
  | \.circleci
  | \.hg
  | \.mypy_cache
  | \.tox
  | \venv
  | \.venv
  | \.eggs
  | _build
  | buck-out
  | build
  | dist
  | src
  | venv
)/
'''